--- a/test/test.css
+++ b/test/test.css
@@ -1,114 +1,44 @@
-    /* Common button styles */
-    .button {
-        float: left;
-        min-width: 140px;
-        max-width: 250px;
-        display: block;
-        margin: 1em;
-        padding: 1em 1em;
-        border: none;
-        background: none;
-        color: inherit;
-        vertical-align: middle;
-        position: relative;
-        z-index: 1;
-        -webkit-backface-visibility: hidden;
-        -moz-osx-font-smoothing: grayscale;
-    }
-    .button:focus {
-        outline: none;
-    }
-    .button > span {
-        vertical-align: middle;
-    }
+button {
+  border-radius: 4px;
+  cursor: pointer;
+  border: 2px solid orangeRed;
+  background: transparent;
+  position: relative;
+  padding: 0;
 
-    /* Sizes */
-    .button--size-s {
-        font-size: 14px;
-    }
-    .button--size-m {
-        font-size: 16px;
-    }
-    .button--size-l {
-        font-size: 18px;
-    }
+  color: #fff;
+  /*For IE*/
+}
+button > span {
+  display: inline-block;
+  padding: 8px 16px;
+  background: linear-gradient(45deg, #fff 50%, orangeRed 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+button:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(45deg, orangeRed 50%, transparent 50%);
+  z-index: -1;
+}
 
-    /* Typography and Roundedness */
-    .button--text-upper {
-        letter-spacing: 2px;
-        text-transform: uppercase;
-    }
-    .button--text-thin {
-        font-weight: 300;
-    }
-    .button--text-medium {
-        font-weight: 500;
-    }
-    .button--text-thick {
-        font-weight: 600;
-    }
-    .button--round-s {
-        border-radius: 5px;
-    }
-    .button--round-m {
-        border-radius: 15px;
-    }
-    .button--round-l {
-        border-radius: 40px;
-    }
+button > span,
+button:after {
+  background-size: 300%;
+  background-position: 100%;
+  transition: 1s, font-size 0.2s;
+}
 
-    /* Borders */
-    .button--border-thin {
-        border: 1px solid;
-    }
-    .button--border-medium {
-        border: 2px solid;
-    }
-    .button--border-thick {
-        border: 3px solid;
-    }
+button:hover > span,
+button:hover:after {
+  background-position: 0;
+  font-size: 1.1em;
 
-    /* Rayen */
-    .button--rayen {
-        overflow: hidden;
-        padding: 0;
-        width: 230px;
-    }
-    .button--rayen.button--inverted {
-        color: #fff;
-    }
-    .button--rayen::before {
-        content: attr(data-text);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: #e60b24;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-    .button--rayen.button--inverted::before {
-        background: #fff;
-        color: #e60b24;
-    }
-    .button--rayen > span {
-        display: block;
-    }
-    .button--rayen::before,
-    .button--rayen > span {
-        padding: 1em 2em;
-        -webkit-transition: -webkit-transform 0.3s;
-        transition: transform 0.3s;
-        -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-        transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
-    }
-    .button--rayen:hover::before {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-    .button--rayen:hover > span {
-        -webkit-transform: translate3d(0, 100%, 0);
-        transform: translate3d(0, 100%, 0);
-    }
-
+  color: orangeRed;
+  /*For IE*/
+}
