--- a/donate/donate.css
+++ b/donate/donate.css
@@ -42,8 +42,7 @@ button:hover:after {
   color: orangeRed;
   /*For IE*/
 }
-
-	.donate {
+donate {
 		border:1px;
     border-color:#000000;
 
@@ -58,8 +57,7 @@ button:hover:after {
 
     
 	}
-
-	.donate td {
+donate td {
 		border:0px;
 		text-align:center;
     padding:10px;
