--- a/donate/donate.css
+++ b/donate/donate.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, Geneva, Helvetica, sans-serif;
+  font-size: 16px;
+}
+
+
 .pay-button {
 	border-radius: 4px;
 	cursor: pointer;
