--- a/modal-test/modal-test.css
+++ b/modal-test/modal-test.css
@@ -1,27 +1,18 @@
-body
-{
-    font-family: Helvetica,Arial,san-serif;
-    font-size: 16px;
-
-    margin: 0;
-    padding: 0;
-}
-
-
 .pay-button {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 15px;
 	border-radius: 4px;
 	cursor: pointer;
 	border: 2px solid orangeRed;
 	background: transparent;
 	position: relative;
 	padding: 0px;
-	min-width: 150px;
+	min-width: 170px;
   margin: 5px;
 	color: #fff;
 	/*For IE*/
 
 }
-
 
 .pay-button > span {
   display: inline-block;
@@ -43,14 +34,11 @@ body
 	z-index: -2;
 }
 
-
-
 .pay-button > span,.pay-button:after {
 	background-size: 300%;
 	background-position: 100%;
 	transition: .6s, font-size .2s;
 }
-
 
 .pay-button:hover > span,.pay-button:hover:after {
 	background-position: 0;
@@ -67,14 +55,16 @@ body
 
 
 .pbmodal-button {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 22px;
 	border-radius: 4px;
 	cursor: pointer;
 	border: 2px solid orangeRed;
 	background: transparent;
 	position: relative;
 	padding: 0px;
-	width: 235px;
-  margin: 0px 0px 10px 0px;
+	width: 390px;
+  margin: 10px 0px 0px 0px;
 	color: #fff;
 	/*For IE*/
 }
@@ -102,10 +92,23 @@ body
 }
 .pbmodal-button:hover > span,.pbmodal-button:hover:after {
 	background-position: 0;
-	font-size: 1.08em;
+	font-size: 1.1em;
 	color: orangeRed;
 	/*For IE*/
 }
+
+
+
+
+
+  
+ .amountdiv {
+  font-size: 22px;
+  word-wrap: break-word;
+  margin: 2px 10px 0px 10px;
+  /*border: 1px solid #c3c3c3;*/
+  }
+
 
 
 
@@ -138,15 +141,16 @@ body
 
 .paybutton-modal
 {
+    font-family: Helvetica, Arial, sans-serif;
     position: absolute;
     z-index: 9999;
     top: 50%;
     left: 50%;
-
     opacity: 0;
-
-    width: 94%;
-    padding: 24px 20px;
+    overflow: auto;
+    width: 100%;
+    padding: 15px 15px 20px 15px;
+    /*padding: 24px 20px;*/
 
     -webkit-transition: 1ms opacity ease;
        -moz-transition: 1ms opacity ease;
@@ -160,7 +164,7 @@ body
          -o-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
 
-    border-radius: 2px;
+    border-radius: 6px;
     background: #fff;
 }
 
@@ -208,88 +212,61 @@ body
 {
     top: 50%;
 
-    -webkit-transition: 500ms top 500ms ease;
-       -moz-transition: 500ms top 500ms ease;
-        -ms-transition: 500ms top 500ms ease;
-         -o-transition: 500ms top 500ms ease;
-            transition: 500ms top 500ms ease;
+    -webkit-transition: 300ms top 300ms ease;
+       -moz-transition: 300ms top 300ms ease;
+        -ms-transition: 300ms top 300ms ease;
+         -o-transition: 300ms top 300ms ease;
+            transition: 300ms top 300ms ease;
 }
 
 .paybutton-modal.fade-and-drop.paybutton-open.paybutton-anchored
 {
 
-    -webkit-transition: 500ms top 500ms ease;
-       -moz-transition: 500ms top 500ms ease;
-        -ms-transition: 500ms top 500ms ease;
-         -o-transition: 500ms top 500ms ease;
-            transition: 500ms top 500ms ease;
+    -webkit-transition: 300ms top 300ms ease;
+       -moz-transition: 300ms top 300ms ease;
+        -ms-transition: 300ms top 300ms ease;
+         -o-transition: 300ms top 300ms ease;
+            transition: 300ms top 300ms ease;
 }
 
 .paybutton-overlay.fade-and-drop.paybutton-open
 {
     top: 0;
 
-    -webkit-transition: 500ms opacity ease;
-       -moz-transition: 500ms opacity ease;
-        -ms-transition: 500ms opacity ease;
-         -o-transition: 500ms opacity ease;
-            transition: 500ms opacity ease;
+    -webkit-transition: 300ms opacity ease;
+       -moz-transition: 300ms opacity ease;
+        -ms-transition: 300ms opacity ease;
+         -o-transition: 300ms opacity ease;
+            transition: 300ms opacity ease;
 
     opacity: 1;
 }
 
 .paybutton-modal.fade-and-drop
 {
-    -webkit-transition: 500ms top ease;
-       -moz-transition: 500ms top ease;
-        -ms-transition: 500ms top ease;
-         -o-transition: 500ms top ease;
-            transition: 500ms top ease;
+    -webkit-transition: 300ms top ease;
+       -moz-transition: 300ms top ease;
+        -ms-transition: 300ms top ease;
+         -o-transition: 300ms top ease;
+            transition: 300ms top ease;
 }
 
 .paybutton-overlay.fade-and-drop
 {
-    -webkit-transition: 500ms opacity 500ms ease;
-       -moz-transition: 500ms opacity 500ms ease;
-        -ms-transition: 500ms opacity 500ms ease;
-         -o-transition: 500ms opacity 500ms ease;
-            transition: 500ms opacity 500ms ease;
+    -webkit-transition: 300ms opacity 300ms ease;
+       -moz-transition: 300ms opacity 300ms ease;
+        -ms-transition: 300ms opacity 300ms ease;
+         -o-transition: 300ms opacity 300ms ease;
+            transition: 300ms opacity 300ms ease;
 }
 
-/* Demo Styles */
-html
+
+
+
+.paybutton-content
 {
-    box-sizing: border-box;
+
+    /*border: 1px solid #c3c3c3;*/
+    text-align: center;
+    margin: 0px 0px 0px 0px;
 }
-
-*
-{
-    box-sizing: inherit;
-}
-
-#content
-{
-    display: none;
-}
-
-
-
-
-
-
-
-
-
-
-
-.addressdiv {
-  word-wrap: break-word;
-  font-size: 14px;
-  margin: 0px 0px 0px 0px;
-  }
-  
- .amountdiv {
-  word-wrap: break-word;
-  font-size: 16px;
-  margin: 0px 0px 12px 0px;
-  }
