--- a/modal-test/modal-test.css
+++ b/modal-test/modal-test.css
@@ -1,273 +1,251 @@
 body
 {
-    font-family: Helvetica,Arial,san-serif;
-    font-size: 16px;
+font-family: Helvetica,Arial,sans-serif;
+font-size: 16px;
 
-    margin: 0;
-    padding: 0;
+margin: 0;
+padding: 0;
 }
 
 
 .pay-button {
-	border-radius: 4px;
-	cursor: pointer;
-	border: 2px solid orangeRed;
-	background: transparent;
-	position: relative;
-	padding: 0px;
-	min-width: 150px;
-  margin: 5px;
-	color: #fff;
-	/*For IE*/
+border-radius: 4px;
+cursor: pointer;
+border: 2px solid orangeRed;
+background: transparent;
+position: relative;
+padding: 0px;
+min-width: 160px;
+margin: 5px;
+color: #fff;
+/*For IE*/
 
 }
-
 
 .pay-button > span {
-  display: inline-block;
-	padding: 8px 16px;
-  position: relative;
-	background: linear-gradient(45deg, #fff 50%, orangeRed 50%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
-  z-index: -1;
+display: inline-block;
+padding: 8px 16px;
+position: relative;
+background: linear-gradient(45deg, #fff 50%, orangeRed 50%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+z-index: -1;
 }
+
 .pay-button:after {
-	content: "";
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: linear-gradient(45deg, orangeRed 50%, transparent 50%);
-	z-index: -2;
+content: "";
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+background: linear-gradient(45deg, orangeRed 50%, transparent 50%);
+z-index: -2;
 }
-
-
 
 .pay-button > span,.pay-button:after {
-	background-size: 300%;
-	background-position: 100%;
-	transition: .6s, font-size .2s;
+background-size: 300%;
+background-position: 100%;
+transition: .5s, font-size .2s;
 }
-
 
 .pay-button:hover > span,.pay-button:hover:after {
-	background-position: 0;
-	font-size: 1.1em;
-	color: orangeRed;
-	/*For IE*/
+background-position: 0;
+font-size: 1.1em;
+color: orangeRed;
+/*For IE*/
 }
-
-
-
-
-
-
 
 
 .pbmodal-button {
-	border-radius: 4px;
-	cursor: pointer;
-	border: 2px solid orangeRed;
-	background: transparent;
-	position: relative;
-	padding: 0px;
-	width: 232px;
-  margin: 10px 0px 0px 0px;
-	color: #fff;
-	/*For IE*/
+border-radius: 4px;
+cursor: pointer;
+border: 2px solid orangeRed;
+background: transparent;
+position: relative;
+padding: 0px;
+width: 260px;
+margin: 10px 0px 0px 0px;
+color: #fff;
+font-size: 1em;
+/*For IE*/
 }
 .pbmodal-button > span {
-	display: inline-block;
-	padding: 8px 16px;
-	background: linear-gradient(45deg, #fff 50%, orangeRed 50%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+display: inline-block;
+padding: 8px 16px;
+background: linear-gradient(45deg, #fff 50%, orangeRed 50%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
 }
 .pbmodal-button:after {
-	content: "";
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: linear-gradient(45deg, orangeRed 50%, transparent 50%);
-	z-index: -1;
+content: "";
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+background: linear-gradient(45deg, orangeRed 50%, transparent 50%);
+z-index: -1;
 }
 .pbmodal-button > span,.pbmodal-button:after {
-	background-size: 300%;
-	background-position: 100%;
-	transition: .6s, font-size .2s;
+background-size: 300%;
+background-position: 100%;
+transition: .6s, font-size .2s;
 }
 .pbmodal-button:hover > span,.pbmodal-button:hover:after {
-	background-position: 0;
-	font-size: 1.08em;
-	color: orangeRed;
-	/*For IE*/
+background-position: 0;
+font-size: 1.08em;
+color: orangeRed;
+/*For IE*/
 }
 
 
-
-  
  .amountdiv {
-  word-wrap: break-word;
-  font-size: 16px;
-  margin: 2px 10px 0px 10px;
-  /*border: 1px solid #c3c3c3;*/
-  }
+word-wrap: break-word;
+font-size: 16px;
+margin: 10px 10px 0px 10px;
+/*border: 1px solid #c3c3c3;*/
+}
 
-
+.qrdiv {
+margin: 5px 0px 0px 0px;
+/*border: 1px solid #c3c3c3;*/
+}
 
 
 /* Modal Base CSS */
-.paybutton-overlay
-{
-    position: fixed;
-    z-index: 9998;
-    top: 0;
-    left: 0;
+.paybutton-overlay {
+position: fixed;
+z-index: 9998;
+top: 0;
+left: 0;
 
-    opacity: 0;
+opacity: 0;
 
-    width: 100%;
-    height: 100%;
+width: 100%;
+height: 100%;
 
-    -webkit-transition: 1ms opacity ease;
-       -moz-transition: 1ms opacity ease;
-        -ms-transition: 1ms opacity ease;
-         -o-transition: 1ms opacity ease;
-            transition: 1ms opacity ease;
+-webkit-transition: 1ms opacity ease;
+ -moz-transition: 1ms opacity ease;
+-ms-transition: 1ms opacity ease;
+ -o-transition: 1ms opacity ease;
+transition: 1ms opacity ease;
 
-    background: rgba(0,0,0,.6);
+background: rgba(0,0,0,.6);
 }
 
-.paybutton-modal
-{
-    position: absolute;
-    z-index: 9999;
-    top: 50%;
-    left: 50%;
-    text-align: center;
-    opacity: 0;
-    overflow: auto;
-    width: 100%;
-    padding: 10px 10px 15px 10px;
-    /*padding: 24px 20px;*/
+.paybutton-modal {
+position: absolute;
+z-index: 9999;
+top: 50%;
+left: 50%;
+text-align: center;
+opacity: 0;
+overflow: auto;
+width: 100%;
+padding: 15px 15px 20px 15px;
+/*padding: 24px 20px;*/
 
-    -webkit-transition: 1ms opacity ease;
-       -moz-transition: 1ms opacity ease;
-        -ms-transition: 1ms opacity ease;
-         -o-transition: 1ms opacity ease;
-            transition: 1ms opacity ease;
+-webkit-transition: 1ms opacity ease;
+ -moz-transition: 1ms opacity ease;
+-ms-transition: 1ms opacity ease;
+ -o-transition: 1ms opacity ease;
+transition: 1ms opacity ease;
 
-    -webkit-transform: translate(-50%, -50%);
-       -moz-transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-         -o-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+-webkit-transform: translate(-50%, -50%);
+ -moz-transform: translate(-50%, -50%);
+-ms-transform: translate(-50%, -50%);
+ -o-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
 
-    border-radius: 6px;
-    background: #fff;
+border-radius: 6px;
+background: #fff;
 }
 
-.paybutton-modal.paybutton-open.paybutton-anchored
-{
-    top: 20px;
-
-    -webkit-transform: translate(-50%, 0);
-       -moz-transform: translate(-50%, 0);
-        -ms-transform: translate(-50%, 0);
-         -o-transform: translate(-50%, 0);
-            transform: translate(-50%, 0);
+.paybutton-content {
+border: 1px solid #c3c3c3;
+text-align: center;
+padding: 0px 0px 0px 0px;
 }
 
-.paybutton-modal.paybutton-open
-{
-    opacity: 1;
+.paybutton-modal.paybutton-open.paybutton-anchored {
+top: 20px;
+
+-webkit-transform: translate(-50%, 0);
+ -moz-transform: translate(-50%, 0);
+-ms-transform: translate(-50%, 0);
+ -o-transform: translate(-50%, 0);
+transform: translate(-50%, 0);
 }
 
-.paybutton-overlay.paybutton-open
-{
-    opacity: 1;
+.paybutton-modal.paybutton-open {
+opacity: 1;
+}
+
+.paybutton-overlay.paybutton-open {
+opacity: 1;
 
 }
 
 /* Default Animation */
 
-.paybutton-overlay.fade-and-drop
-{
-    display: block;
+.paybutton-overlay.fade-and-drop {
+display: block;
 
-    opacity: 0;
+opacity: 0;
 }
 
-.paybutton-modal.fade-and-drop
-{
-    top: -300%;
+.paybutton-modal.fade-and-drop {
+top: -300%;
 
-    opacity: 1;
+opacity: 1;
 
-    display: block;
+display: block;
 }
 
-.paybutton-modal.fade-and-drop.paybutton-open
-{
-    top: 50%;
+.paybutton-modal.fade-and-drop.paybutton-open {
+top: 50%;
 
-    -webkit-transition: 300ms top 300ms ease;
-       -moz-transition: 300ms top 300ms ease;
-        -ms-transition: 300ms top 300ms ease;
-         -o-transition: 300ms top 300ms ease;
-            transition: 300ms top 300ms ease;
+-webkit-transition: 300ms top 300ms ease;
+ -moz-transition: 300ms top 300ms ease;
+-ms-transition: 300ms top 300ms ease;
+ -o-transition: 300ms top 300ms ease;
+transition: 300ms top 300ms ease;
 }
 
-.paybutton-modal.fade-and-drop.paybutton-open.paybutton-anchored
-{
+.paybutton-modal.fade-and-drop.paybutton-open.paybutton-anchored {
 
-    -webkit-transition: 300ms top 300ms ease;
-       -moz-transition: 300ms top 300ms ease;
-        -ms-transition: 300ms top 300ms ease;
-         -o-transition: 300ms top 300ms ease;
-            transition: 300ms top 300ms ease;
+-webkit-transition: 300ms top 300ms ease;
+ -moz-transition: 300ms top 300ms ease;
+-ms-transition: 300ms top 300ms ease;
+ -o-transition: 300ms top 300ms ease;
+transition: 300ms top 300ms ease;
 }
 
-.paybutton-overlay.fade-and-drop.paybutton-open
-{
-    top: 0;
+.paybutton-overlay.fade-and-drop.paybutton-open {
+top: 0;
 
-    -webkit-transition: 300ms opacity ease;
-       -moz-transition: 300ms opacity ease;
-        -ms-transition: 300ms opacity ease;
-         -o-transition: 300ms opacity ease;
-            transition: 300ms opacity ease;
+-webkit-transition: 300ms opacity ease;
+ -moz-transition: 300ms opacity ease;
+-ms-transition: 300ms opacity ease;
+ -o-transition: 300ms opacity ease;
+transition: 300ms opacity ease;
 
-    opacity: 1;
+opacity: 1;
 }
 
-.paybutton-modal.fade-and-drop
-{
-    -webkit-transition: 300ms top ease;
-       -moz-transition: 300ms top ease;
-        -ms-transition: 300ms top ease;
-         -o-transition: 300ms top ease;
-            transition: 300ms top ease;
+.paybutton-modal.fade-and-drop {
+-webkit-transition: 300ms top ease;
+ -moz-transition: 300ms top ease;
+-ms-transition: 300ms top ease;
+ -o-transition: 300ms top ease;
+transition: 300ms top ease;
 }
 
-.paybutton-overlay.fade-and-drop
-{
-    -webkit-transition: 300ms opacity 300ms ease;
-       -moz-transition: 300ms opacity 300ms ease;
-        -ms-transition: 300ms opacity 300ms ease;
-         -o-transition: 300ms opacity 300ms ease;
-            transition: 300ms opacity 300ms ease;
-}
-
-
-.paybutton-content
-{
-
-    /*border: 1px solid #c3c3c3;*/
-    text-align: center;
-    padding: 0px 0px 0px 0px;
+.paybutton-overlay.fade-and-drop {
+-webkit-transition: 300ms opacity 300ms ease;
+ -moz-transition: 300ms opacity 300ms ease;
+-ms-transition: 300ms opacity 300ms ease;
+ -o-transition: 300ms opacity 300ms ease;
+transition: 300ms opacity 300ms ease;
 }
