--- a/modal-test/modal-test.css
+++ b/modal-test/modal-test.css
@@ -290,3 +290,22 @@ transition: 300ms top ease;
  -o-transition: 300ms opacity 300ms ease;
 transition: 300ms opacity 300ms ease;
 }
+.donate {
+	border:1px;
+	border-color:#000000;
+	width:500px;
+	height:400px;
+	background-color:#f2f2f2;
+	position:fixed;
+	margin-left:-250px;
+	/* half of width */
+	margin-top:-200px;
+	/* half of height */
+	top:50%;
+	left:50%;
+}
+.donate td {
+	border:0px;
+	text-align:center;
+	padding:10px;
+}
