--- a/modal-test/modal-test.css
+++ b/modal-test/modal-test.css
@@ -292,16 +292,16 @@ transition: 300ms opacity 300ms ease;
 }
 .donate
 {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  width: 100px;
-  height: 100px;
-  background-color: #ccc;
-  border-radius: 3px;
+    border: 1px;
+    border-color: #000000;
+    width: 700px;
+    height: 600px;
+    background-color: #f2f2f2;
+    position: fixed;
+    margin-left: -350px;
+    margin-top: -300px;
+    top: 50%;
+    left: 50%;
 }
 .donate td {
 	border:0px;
