--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -1,5 +1,4 @@
 /* begin default button set */
-
 .pay-button {
 font-family: Verdana, Geneva, sans-serif;
 font-size: 16px;
@@ -125,12 +124,10 @@ background: linear-gradient(35deg, #F7941D 50%, transparent 50%);
 background-size: 300%;
 background-position: 100%;
 }
-
 /* end default button set */
 
 
 /* begin ca button set */
-
 .ca {
 border: 2px solid #e67e22;
 /*For IE*/
@@ -217,12 +214,10 @@ background: linear-gradient(35deg, #e67e22 50%, transparent 50%);
 background-size: 300%;
 background-position: 100%;
 }
-
 /* end ca button set */
 
 
 /* begin po button set */
-
 .po {
 border: 2px solid #c0392b;
 /*For IE*/
@@ -309,12 +304,10 @@ background: linear-gradient(35deg, #c0392b 50%, transparent 50%);
 background-size: 300%;
 background-position: 100%;
 }
-
 /* end po button set */
 
 
 /* begin wa button set */
-
 .wa {
 border: 2px solid #34495e;
 /*For IE*/
@@ -401,32 +394,72 @@ background: linear-gradient(35deg, #34495e 50%, transparent 50%);
 background-size: 300%;
 background-position: 100%;
 }
-
 /* end wa button set */
 
 
-/* begin modal button */
+/* begin spice button set */
+.spice {
+font-size: 15px;
+font-weight: bold;
+border-radius: 0px;
+border: 3px solid #000000;
+background: transparent;
+padding: 0px;
+width: 270px;
+color: #000000;
+/*For IE*/
+}
 
+.spice > span {
+padding: 15px 8px;
+background: linear-gradient(45deg, #000000 50%, #000000 50%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+}
+
+.spice:hover {
+	border: 3px solid #000;
+	font-weight: bold;
+}
+
+.spice:after {
+background: linear-gradient(35deg, #E60B24 50%, transparent 50%);
+}
+
+.spice > span,.spice:after {
+background-size: 300%;
+background-position: 100%;
+transition: 1.1s, font-size 1.1s;
+}
+
+.spice:hover > span,.spice:hover:after {
+/*padding: .95em;*/
+/*font-size: 1.1em;*/
+/*For IE*/
+}
+/* begin spice button set */
+
+
+/* begin modal button */
 .modal {
-border: 2px solid #d35400;
+border: 2px solid #e67e22;
 margin: 10px 0px 0px 0px;
 width: 260px;
 /*For IE*/
 }
 .modal:hover {
-	border: 2px solid #d35400;
+	border: 2px solid #e67e22;
 }
 .modal > span {
-background: linear-gradient(45deg, #FFF 50%, #d35400 50%);
+background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 }
 .modal:after {
-background: linear-gradient(20deg, #e67e22 50%, transparent 50%);
+background: linear-gradient(20deg, #F7941D 50%, transparent 50%);
 }
 .modal > span, .modal:after {
 background-size: 300%;
 background-position: 100%;
 }
-
 /* end modal button */
