--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -399,7 +399,7 @@ background-position: 100%;
 
 /* begin spice button set */
 .spice {
-font-size: 15px;
+font-size: 16px;
 font-weight: bold;
 border-radius: 0px;
 border: 3px solid #000000;
@@ -451,6 +451,7 @@ width: 260px;
 	border: 2px solid #e67e22;
 }
 .modal > span {
+padding: 15px 6px;
 background: linear-gradient(45deg, #FFF 50%, #e67e22 50%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
