--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -1,5 +1,6 @@
 /* begin default button set */
 .pay-button {
+font-family: Helvetica, Arial, sans-serif;
 font-size: 16px;
 font-weight: bold;
 border-radius: 4px;
@@ -398,7 +399,7 @@ background-position: 100%;
 
 /* begin spice button set */
 .spice {
-font-size: 16px;
+font-size: 18px;
 font-weight: bold;
 border-radius: 0px;
 border: 3px solid #000000;
