--- a/pre-release/v0.1/css/modal.css
+++ b/pre-release/v0.1/css/modal.css
@@ -21,7 +21,7 @@ background: rgba(0,0,0,.6);
 }
 
 .paybutton-modal {
-all: initial;
+/*all: initial;*/
 font-family: Helvetica Neu, Arial, sans-serif;
 font-size: 1em;
 position: fixed;
