--- a/pre-release/v0.1/css/modal.css
+++ b/pre-release/v0.1/css/modal.css
@@ -1,16 +1,13 @@
 /* Modal Base CSS */
 .paybutton-overlay {
-	   all: initial;
 position: fixed;
 z-index: 9998;
 top: 0;
 left: 0;
-
 opacity: 0;
-
 width: 100%;
 height: 100%;
-
+	
 -webkit-transition: 1ms opacity ease;
  -moz-transition: 1ms opacity ease;
 -ms-transition: 1ms opacity ease;
@@ -21,9 +18,9 @@ background: rgba(0,0,0,.6);
 }
 
 .paybutton-modal {
-/*all: initial;*/
-font-family: Helvetica Neu, Arial, sans-serif;
-font-size: 1em;
+all: initial;
+font-family: Helvetica Neu, Arial, sans-serif !important;
+/*font-size: 1em;*/
 position: fixed;
 z-index: 9999;
 top: 50%;
