--- a/pre-release/v0.1/css/buttons.css
+++ b/pre-release/v0.1/css/buttons.css
@@ -1,10 +1,14 @@
 /* begin default button set */
 .pay-button {
-all: initial;
-font-family: Helvetica Neu, Arial, sans-serif !important;
+
+font-family: Helvetica Neu, Arial, sans-serif;
+
 font-size: 1.1em;
 line-height: 1.1em;
+
+		
 box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.08);
+
 font-weight: 500;
 border-radius: 4px;
 cursor: pointer;
