--- a/pre-release/v0.1/css/modal.css
+++ b/pre-release/v0.1/css/modal.css
@@ -4,10 +4,12 @@ position: fixed;
 z-index: 9998;
 top: 0;
 left: 0;
+
 opacity: 0;
+
 width: 100%;
 height: 100%;
-	
+
 -webkit-transition: 1ms opacity ease;
  -moz-transition: 1ms opacity ease;
 -ms-transition: 1ms opacity ease;
@@ -18,9 +20,8 @@ background: rgba(0,0,0,.6);
 }
 
 .paybutton-modal {
-all: initial;
-font-family: Helvetica Neu, Arial, sans-serif !important;
-/*font-size: 1em;*/
+font-family: Helvetica Neu, Arial, sans-serif;
+font-size: 1em;
 position: fixed;
 z-index: 9999;
 top: 50%;
@@ -140,3 +141,50 @@ transition: 700ms top ease;
  -o-transition: 300ms opacity 300ms ease;
 transition: 300ms opacity 300ms ease;
 }
+
+ .amountdiv {
+word-wrap: break-word;
+margin: 6px 8px 0px 8px;
+}
+
+ .addressdiv {
+word-wrap: break-word;
+font-size: 10px;
+margin: 10px 8px 0px 8px;
+}
+
+.qrparent {
+	cursor: pointer;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+.qrcode {
+  position: relative;
+  top: 0;
+  left: 0;
+	border: 2px solid #000000;
+}
+.qricon {
+    position: absolute;
+		top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    display: block;
+    margin: auto;
+		}
+.qrctc {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+		color: #000000;
+		font-size: 14px;
+    display: block;
+    margin: 0px 7px 7px 0px;
+		padding: 3px;
+		text-align:right;
+		opacity: 0.95;
+		background: #FFFFFF;
+		}
