--- a/pre-release/v0.1/css/modal.css
+++ b/pre-release/v0.1/css/modal.css
@@ -149,6 +149,7 @@ margin: 6px 8px 0px 8px;
 }
 
  .addressdiv {
+font-size: 10px;
 word-wrap: break-word;
 font-size: 10px;
 margin: 10px 8px 0px 8px;
